2006-09-10  Bastien Nocera  <hadess@hadess.net>

	* src/plparse/totem-pl-parser.c: (totem_pl_parser_add_directory):
	Detect DVDs even if they're deeper in the folder hierarchy, and
	set a default title for them

2006-09-10  Bastien Nocera  <hadess@hadess.net>

	* src/plparse/totem-pl-parser.c: (totem_pl_parser_add_m3u):
	Handle playlists linked inside playlists, as used on
	http://www.kinkfm.com (Closes: #354954)

2006-09-10  Bastien Nocera  <hadess@hadess.net>

	* src/plparse/totem-pl-parser.c: (parse_asx_entries): patch from
	Jonathan Matthew <jonathan@kaolin.wh9.net> to handle "BASE HREF"
	in ASX files (Closes: #355222)

============ Version 2.16.1

2006-09-07  Bastien Nocera  <hadess@hadess.net>

	* NEWS: upd
	* configure.in: 2.16.1

2006-09-07  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/Makefile.am:
	* browser-plugin/idl/Makefile.am:
	* browser-plugin/idl/totemIMullYPlayer.idl:
	* browser-plugin/totemGMPPlugin.cpp:
	* browser-plugin/totemMullYPlugin.cpp:
	* browser-plugin/totemMullYPlugin.h:
	* browser-plugin/totemPlugin.cpp:
	* configure.in: Add a new "MullY" plugin, to handle videos on the
	DivX website, masquerading as the "DivX Web Player"
	(Closes: #345554)

2006-09-07  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/totemPlugin.cpp:
	- Don't fork a viewer in set_window if we don't have a stream yet,
	it'll come later
	- Note whether we tested for a playlist in _write
	- Test whether we have a playlist in _stream_as_file, if we haven't
	already done so
	- Don't set the "local filename" if we have a playlist
	* browser-plugin/totemPlugin.h: add a tried_write member
	* src/plparse/totem-pl-parser-mini.h:
	* src/plparse/totem-pl-parser.c: (parse_asx_entry),
	(totem_pl_parser_can_parse_from_filename):
	- Add totem_pl_parser_can_parse_from_filename, to test whether we
	have a playlist, from a local file
	- Don't prefer mms: streams to http: ones when parsing ASX entries
	with alternate locations
